--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-parameter-properties": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "semi": [2, "always"],
     "@nrwl/nx/enforce-module-boundaries": [
       "error",
@@ -32,8 +33,7 @@
         ],
         "enforceBuildableLibDependency": true
       }
-    ],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    ]
   },
   "overrides": [
     {
