--- a/apps/frontend-e2e/.eslintrc.json
+++ b/apps/frontend-e2e/.eslintrc.json
@@ -1,5 +1,13 @@
 {
-  "extends": ["../../.eslintrc", "plugin:cypress/recommended"],
-  "rules": {},
-  "ignorePatterns": ["!**/*"]
+  "extends": ["plugin:cypress/recommended", "../../.eslintrc.json"],
+  "ignorePatterns": ["!**/*"],
+  "overrides": [
+    {
+      "files": ["src/plugins/index.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off",
+        "no-undef": "off"
+      }
+    }
+  ]
 }
