--- a/apps/frontend-e2e/tsconfig.e2e.json
+++ b/apps/frontend-e2e/tsconfig.e2e.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "sourceMap": false,
-    "outDir": "../../dist/out-tsc"
+    "outDir": "../../dist/out-tsc",
+    "allowJs": true,
+    "types": ["cypress", "node"]
   },
-  "include": ["src/**/*.ts"],
-  "files": []
+  "include": ["src/**/*.ts", "src/**/*.js"]
 }
