--- a/apps/frontend/.eslintrc.json
+++ b/apps/frontend/.eslintrc.json
@@ -1,4 +1,6 @@
 {
+  "extends": ["../../.eslintrc.json"],
+  "ignorePatterns": ["!**/*"],
   "env": {
     "browser": true,
     "commonjs": true,
@@ -6,11 +8,7 @@
     "jest": true,
     "node": true
   },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
+  "settings": { "react": { "version": "detect" } },
   "plugins": ["import", "jsx-a11y", "react", "react-hooks"],
   "rules": {
     "array-callback-return": "warn",
@@ -38,13 +36,7 @@
     "no-invalid-regexp": "warn",
     "no-iterator": "warn",
     "no-label-var": "warn",
-    "no-labels": [
-      "warn",
-      {
-        "allowLoop": true,
-        "allowSwitch": false
-      }
-    ],
+    "no-labels": ["warn", { "allowLoop": true, "allowSwitch": false }],
     "no-lone-blocks": "warn",
     "no-loop-func": "warn",
     "no-mixed-operators": [
@@ -144,14 +136,7 @@
     ],
     "no-unexpected-multiline": "warn",
     "no-unreachable": "warn",
-    "no-unused-expressions": [
-      "error",
-      {
-        "allowShortCircuit": true,
-        "allowTernary": true,
-        "allowTaggedTemplates": true
-      }
-    ],
+    "no-unused-expressions": "off",
     "no-unused-labels": "warn",
     "no-useless-computed-key": "warn",
     "no-useless-concat": "warn",
@@ -165,7 +150,7 @@
       }
     ],
     "no-with": "warn",
-    "no-whitespace-before-property": "off",
+    "no-whitespace-before-property": "warn",
     "react-hooks/exhaustive-deps": "warn",
     "require-yield": "warn",
     "rest-spread-spacing": ["warn", "never"],
@@ -190,23 +175,12 @@
     "import/first": "error",
     "import/no-amd": "error",
     "import/no-webpack-loader-syntax": "error",
-    "react/forbid-foreign-prop-types": [
-      "warn",
-      {
-        "allowInPropTypes": true
-      }
-    ],
+    "react/forbid-foreign-prop-types": ["warn", { "allowInPropTypes": true }],
     "react/jsx-no-comment-textnodes": "warn",
     "react/jsx-no-duplicate-props": "warn",
     "react/jsx-no-target-blank": "warn",
     "react/jsx-no-undef": "error",
-    "react/jsx-pascal-case": [
-      "warn",
-      {
-        "allowAllCaps": true,
-        "ignore": []
-      }
-    ],
+    "react/jsx-pascal-case": ["warn", { "allowAllCaps": true, "ignore": [] }],
     "react/jsx-uses-react": "warn",
     "react/jsx-uses-vars": "warn",
     "react/no-danger-with-children": "warn",
@@ -216,14 +190,13 @@
     "react/react-in-jsx-scope": "error",
     "react/require-render-return": "error",
     "react/style-prop-object": "warn",
+    "react/jsx-no-useless-fragment": "warn",
     "jsx-a11y/accessible-emoji": "warn",
     "jsx-a11y/alt-text": "warn",
     "jsx-a11y/anchor-has-content": "warn",
     "jsx-a11y/anchor-is-valid": [
       "warn",
-      {
-        "aspects": ["noHref", "invalidHref"]
-      }
+      { "aspects": ["noHref", "invalidHref"] }
     ],
     "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
     "jsx-a11y/aria-props": "warn",
@@ -260,14 +233,17 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
-      {
-        "args": "none",
-        "ignoreRestSiblings": true
-      }
+      { "args": "none", "ignoreRestSiblings": true }
     ],
     "no-useless-constructor": "off",
-    "@typescript-eslint/no-useless-constructor": "warn"
-  },
-  "extends": ["../../.eslintrc"],
-  "ignorePatterns": ["!**/*"]
+    "@typescript-eslint/no-useless-constructor": "warn",
+    "@typescript-eslint/no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true,
+        "allowTernary": true,
+        "allowTaggedTemplates": true
+      }
+    ]
+  }
 }
