--- a/apps/graphql-api/.eslintrc.json
+++ b/apps/graphql-api/.eslintrc.json
@@ -1,5 +1,1 @@
-{
-  "extends": "../../.eslintrc",
-  "rules": {},
-  "ignorePatterns": ["!**/*"]
-}
+{ "extends": "../../.eslintrc.json", "ignorePatterns": ["!**/*"], "rules": {} }
