--- a/apps/graphql-api/tsconfig.app.json
+++ b/apps/graphql-api/tsconfig.app.json
@@ -5,6 +5,5 @@
     "types": ["node"]
   },
   "exclude": ["**/*.spec.ts"],
-  "include": ["**/*.ts", "./src/types/*.d.ts"],
-  "files": []
+  "include": ["**/*.ts"]
 }
