--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,18 +15,48 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
     "paths": {
       "@myiworlds/credentials": ["libs/credentials/src/index.ts"],
-      "@myiworlds/types": ["libs/types/src/index.ts"],
-      "@myiworlds/services": ["libs/services/src/index.ts"],
       "@myiworlds/enums": ["libs/enums/src/index.ts"],
       "@myiworlds/factories": ["libs/factories/src/index.ts"],
-      "@myiworlds/helper-functions": ["libs/helper-functions/src/index.ts"]
+      "@myiworlds/helper-functions": ["libs/helper-functions/src/index.ts"],
+      "@myiworlds/services": ["libs/services/src/index.ts"],
+      "@myiworlds/types": ["libs/types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
 }
+
+// Old
+// {
+//   "compileOnSave": false,
+//   "compilerOptions": {
+//     "rootDir": ".",
+//     "sourceMap": true,
+//     "declaration": false,
+//     "moduleResolution": "node",
+//     "emitDecoratorMetadata": true,
+//     "experimentalDecorators": true,
+//     "importHelpers": true,
+//     "target": "es2015",
+//     "module": "esnext",
+//     "typeRoots": ["node_modules/@types"],
+//     "lib": ["es2017", "dom"],
+//     "skipLibCheck": true,
+//     "skipDefaultLibCheck": true,
+//     "baseUrl": ".",
+//     "noImplicitAny": true,
+//     "noImplicitThis": true,
+//     "strictNullChecks": true,
+//     "noUnusedLocals": true,
+//     "paths": {
+//       "@myiworlds/credentials": ["libs/credentials/src/index.ts"],
+//       "@myiworlds/types": ["libs/types/src/index.ts"],
+//       "@myiworlds/services": ["libs/services/src/index.ts"],
+//       "@myiworlds/enums": ["libs/enums/src/index.ts"],
+//       "@myiworlds/factories": ["libs/factories/src/index.ts"],
+//       "@myiworlds/helper-functions": ["libs/helper-functions/src/index.ts"]
+//     }
+//   },
+//   "exclude": ["node_modules", "tmp"]
+// }
